objects/Employee__c.object
<CustomObject>
    <label>Employee</label>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Azores</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Banaba Island</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan, Kingdom of</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Officer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Officer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Employee End Date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <label>Job Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Entity__c</fullName>
        <label>PKI Entity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boston Radar</fullName>
                </value>
                <value>
                    <fullName>BU</fullName>
                </value>
                <value>
                    <fullName>Caliper Life Sciences AG</fullName>
                </value>
                <value>
                    <fullName>Caliper Life Sciences Benelux NV</fullName>
                </value>
                <value>
                    <fullName>Caliper Life Sciences Europe</fullName>
                </value>
                <value>
                    <fullName>Caliper Life Sciences GmbH</fullName>
                </value>
                <value>
                    <fullName>Caliper Life Sciences Limited</fullName>
                </value>
                <value>
                    <fullName>Caliper Life Sciences LTD</fullName>
                </value>
                <value>
                    <fullName>Caliper Life Sciences S.A</fullName>
                </value>
                <value>
                    <fullName>Candu Energy</fullName>
                </value>
                <value>
                    <fullName>Haemonetics</fullName>
                </value>
                <value>
                    <fullName>JAA Corporation</fullName>
                </value>
                <value>
                    <fullName>Lumac BV</fullName>
                </value>
                <value>
                    <fullName>Merck Test Account</fullName>
                </value>
                <value>
                    <fullName>PKI, Inc.</fullName>
                </value>
                <value>
                    <fullName>PKI (Ireland) Ltd.</fullName>
                </value>
                <value>
                    <fullName>PKI (Schweiz) AG</fullName>
                </value>
                <value>
                    <fullName>PKI Biosignal, Inc.</fullName>
                </value>
                <value>
                    <fullName>PKI Cellular Sciences Belgium Sprl</fullName>
                </value>
                <value>
                    <fullName>PKI Cellular Technologies Germany</fullName>
                </value>
                <value>
                    <fullName>PKI de Mexico, S.A.</fullName>
                </value>
                <value>
                    <fullName>PKI do Brasil Ltda.</fullName>
                </value>
                <value>
                    <fullName>PKI Espana, S.L.</fullName>
                </value>
                <value>
                    <fullName>PKI Finance Holdings Limited</fullName>
                </value>
                <value>
                    <fullName>PKI Finland OY</fullName>
                </value>
                <value>
                    <fullName>PKI Health Sciences, Inc.</fullName>
                </value>
                <value>
                    <fullName>PKI Health Sciences BV</fullName>
                </value>
                <value>
                    <fullName>PKI Health Sciences Canada, Inc.</fullName>
                </value>
                <value>
                    <fullName>PKI Holdings, Inc.</fullName>
                </value>
                <value>
                    <fullName>PKI Holdings BV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SFDC_Login__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SFDC Login</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Employees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>Employee Start Date</description>
        <inlineHelpText>Employee Start Date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <description>Middle Name</description>
        <label>Middle Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Street Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Office_Location__c</fullName>
        <label>Office Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Cambridge</fullName>
                </value>
                <value>
                    <fullName>Hopkinton</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Pennsylvania</fullName>
                </value>
                <value>
                    <fullName>Shanghai</fullName>
                </value>
                <value>
                    <fullName>Shelton</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>Waltham</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <label>Phone Extension</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Professional_Designation__c</fullName>
        <label>Professional Designation</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Authority_Non_officer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature Authority Non-officer</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Officer</fullName>
        <active>true</active>
        <description>PKI Employees: Officer Type Contacts</description>
        <label>Officer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Officer</fullName>
        <active>true</active>
        <description>PKI Employees: Non Officer Type Contacts</description>
        <label>Non Officer</label>
    </recordTypes>
</CustomObject>